--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -32,6 +32,8 @@ MaxRequestsLimit = 10
 [Oracle]
 # post swap register RPC requests to this server
 ServerAPIAddress = "http://127.0.0.1:11556/rpc"
+# don't check server connection
+NoCheckServerConnection = false
 # getting accept list interval in accept job
 GetAcceptListInterval = 20
 # when meet invalid accept, ignore it instead of disagree it immediately
