--- a/params/config-example.toml
+++ b/params/config-example.toml
@@ -42,6 +42,8 @@ APIAddress = ["http://127.0.0.1:8711", "http://127.0.0.1:8722"]
 [Oracle]
 # post swap register RPC requests to this server
 ServerAPIAddress = "http://127.0.0.1:11556/rpc"
+# don't check server connection
+NoCheckServerConnection = false
 # getting accept list interval in accept job
 GetAcceptListInterval = 20
 # when meet invalid accept, ignore it instead of disagree it immediately
